# hw3-Hwan-ung_peerReview

./: .gitignore  README.md  ai_documentation.txt  environment.yml  myst.yml
ligotools/: __init__.py  pyproject.toml
ligotools/ligotools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ligotools/ligotools/tests/: test_readligo.py  test_utils.py
